fix: LP scroll overflow to overflow-y

--- a/src/containers/Panels/LibraryPanel/LPBody.module.scss
+++ b/src/containers/Panels/LibraryPanel/LPBody.module.scss
@@ -8,7 +8,7 @@
   overflow-y: hidden;
 
   &:hover {
-    overflow: auto;
+    overflow-y: auto;
     overflow-y: overlay;
   }
 
